# tradr-uav-fpv

./: CMakeLists.txt  package.xml
src/: fpvwindow.cpp  fpvwindow.h  fpvwindow.ui  main.cpp  rosthread.cpp  rosthread.h  uav.cpp  uav.h  uavitemwidget.cpp  uavitemwidget.h  uavitemwidget.ui  uavmanager.cpp  uavmanager.h  videodecoder.cpp  videodecoder.h
