<?xml version="1.0"?>
<package>

    <name>tradr_uav_fpv</name>
    <version>0.1.0</version>
    <description>The tradr_uav_fpv package</description>

    <maintainer email="Alexander.Schmitz@IAIS.Fraunhofer.de">Alexander Schmitz</maintainer>
    <url type="website">http://www.tradr-project.eu</url>

    <license>ToDo</license>

    <author email="alexander.schmitz@iais.fraunhofer.de">Alexander Schmitz</author>


    <buildtool_depend>catkin</buildtool_depend>

    <build_depend>roscpp</build_depend>
    <build_depend>libqt4-dev</build_depend>
    <build_depend>libvlc-dev</build_depend>
    <build_depend>bridge_path_interface_msgs</build_depend>
    <build_depend>uav_videostream_msgs</build_depend>

    <run_depend>roscpp</run_depend>
    <run_depend>libqt4</run_depend>
    <run_depend>libvlc-dev</run_depend>

</package>
